# nao_hri

./: README.md
nao_bt_controller/: README.md  package.xml  setup.cfg  setup.py
nao_bt_controller/nao_bt_controller/: bt_runner.py
nao_hri_demo_nodes/nao_hri_demo_nodes/: CMakeLists.txt  README.md  package.xml
nao_hri_demo_nodes/nao_hri_demo_nodes/config/: exercises_catalog.yml
nao_hri_demo_nodes/nao_hri_demo_nodes/config/opencv_templates/: rightarmUp.yml
nao_hri_demo_nodes/nao_hri_demo_nodes/scripts/: nao_pos_bridge.py  opencv_eval_node.py  speak_bridge.py
nao_hri_demo_nodes/nao_hri_demo_nodes/src/: ui_stub.cpp
nao_hri_demo_nodes/nao_ui_client/nao_led_profiles/: CMakeLists.txt  README.md  package.xml
nao_hri_demo_nodes/nao_ui_client/nao_led_profiles/config/emotions/: comparison.yml  default.yml  happy.yml  listen.yml  nao_pos.yml  neutral.yml  sad.yml  serious.yml  speak.yml  surprised.yml  video.yml
nao_hri_demo_nodes/nao_ui_client/nao_ui_utils/: CMakeLists.txt  README.md  package.xml
nao_hri_demo_nodes/nao_ui_client/nao_ui_utils/include/nao_ui_utils/: led_profile.hpp  yaml_profile_loader.hpp
nao_hri_demo_nodes/nao_ui_client/nao_ui_utils/src/: yaml_profile_loader.cpp
